# calendrier

./: .gitignore  Cargo.toml  README.md  build.rs
data/: equinoxes.txt
examples/: today.rs
src/: chrono_compat.rs  date.rs  datetime.rs  day.rs  day_names.rs  equinoxes.rs  equinoxes_pattern.rs  lib.rs  months.rs  timestamp.rs  years.rs  years_pattern.rs
