[package]
name = "calendrier"
description = "Crate for handling dates in the french Revolutionary calendar"
authors = ["Mubelotix <mubelotix@gmail.com>"]
license = "MIT"
readme = "README.md"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"], optional = true }

[features]
default = ["chrono"]
chrono = ["dep:chrono"]

[dev-dependencies]
chrono = "0.4"

[build-dependencies]
chrono = "0.4"
