[package]
name = "calendrier"
description = "Crate for handling dates in the french Revolutionary calendar"
authors = ["Mubelotix <mubelotix@gmail.com>"]
repository = "https://github.com/Mubelotix/calendrier"
license = "MIT"
readme = "README.md"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"], optional = true }

[features]
default = ["chrono"]
chrono = ["dep:chrono"]
no-time-offset = []      # Disables the time offset (1080 seconds by default)
average-time-offset = [] # Enables the most accurate time offset (1029 seconds)

[dev-dependencies]
chrono = "0.4.31"

[build-dependencies]
chrono = "0.4.31"
